--- a/exercices/exercice_pimpampoum_correction.ipynb
+++ b/exercices/exercice_pimpampoum_correction.ipynb
@@ -131,6 +131,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1   \n",
+      "2 pim  \n",
+      "3  pam \n",
+      "4 pim  \n",
+      "5   poum\n",
+      "6 pim pam \n",
+      "7   \n",
+      "8 pim  \n",
+      "9  pam \n",
+      "10 pim  poum\n",
+      "11   \n",
+      "12 pim pam \n",
+      "13   \n",
+      "14 pim  \n",
+      "15  pam poum\n",
+      "16 pim  \n",
+      "17   \n",
+      "18 pim pam \n",
+      "19   \n",
+      "20 pim  poum\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(1, 21):\n",
+    "    if x % 2 == 0:\n",
+    "        div2 = \"pim\"\n",
+    "    else:\n",
+    "        div2 = \"\"\n",
+    "\n",
+    "    if x % 3 == 0:\n",
+    "        div3 = \"pam\"\n",
+    "    else:\n",
+    "        div3 = \"\"\n",
+    "        \n",
+    "    if x % 5 == 0:\n",
+    "        div5 = \"poum\"\n",
+    "    else:\n",
+    "        div5 = \"\"\n",
+    "    print( f\"{x} {div2} {div3} {div5}\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
