--- a/exercices/exercices01.ipynb
+++ b/exercices/exercices01.ipynb
@@ -655,6 +655,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrez un mot de passe: password1234\n",
+      "Le mot de passe est incorrect\n",
+      "symboles: 0\n",
+      "maj  0\n",
+      "min 8\n",
+      "chiffre  4\n",
+      "invalide  0\n",
+      "longueur  12\n",
+      "Entrez un mot de passe: Password+123\n",
+      "Password+123 accepté\n"
+     ]
+    }
+   ],
+   "source": [
+    "valide = False\n",
+    "symboles = [\"-\", \"+\", \"*\", \"#\", \"@\"]\n",
+    "\n",
+    "\n",
+    "while valide == False:\n",
+    "    mdp = input(\"Entrez un mot de passe: \")\n",
+    "\n",
+    "    nb_symboles = 0\n",
+    "    nb_majuscules = 0\n",
+    "    nb_minuscules = 0\n",
+    "    nb_chiffres = 0\n",
+    "    \n",
+    "    for lettre in mdp:\n",
+    "        if lettre in symboles:\n",
+    "            nb_symboles = nb_symboles + 1\n",
+    "        if ord(lettre) >= ord('A') and ord(lettre) <= ord('Z'):\n",
+    "            nb_majuscules += 1\n",
+    "        if lettre >= 'a' and lettre <= 'z':\n",
+    "            nb_minuscules += 1\n",
+    "        if lettre >= '0' and lettre <= '9':\n",
+    "            nb_chiffres += 1\n",
+    "    \n",
+    "    nb_invalides = len(mdp) - nb_symboles - nb_majuscules - nb_minuscules - nb_chiffres\n",
+    "    \n",
+    "    if nb_symboles == 1 and \\\n",
+    "        nb_majuscules >= 1 and \\\n",
+    "        nb_minuscules >= 5 and \\\n",
+    "        1 <= nb_chiffres <= 3 and \\\n",
+    "        len(mdp) >= 8 and \\\n",
+    "        nb_invalides == 0:\n",
+    "        \n",
+    "        valide = True\n",
+    "    else:\n",
+    "        print(\"Le mot de passe est incorrect\")\n",
+    "        print(\"symboles:\", nb_symboles )\n",
+    "        print(\"maj \", nb_majuscules )\n",
+    "        print(\"min\", nb_minuscules )\n",
+    "        print(\"chiffre \", nb_chiffres )\n",
+    "        print(\"invalide \", nb_invalides )\n",
+    "        print(\"longueur \", len(mdp))\n",
+    "\n",
+    "\n",
+    "if valide:\n",
+    "    print(mdp, \"accepté\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
