--- a/intro-python-part1.ipynb
+++ b/intro-python-part1.ipynb
@@ -4,26 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction au langage Python (partie 1)\n",
-    "\n",
-    "## Introduction\n",
-    "\n",
-    "Le langage Python peut-être installé à partir de nombreuses distributions.\n",
-    "Liste de distributions python libres: <https://wiki.python.org/moin/PythonDistributions>\n",
-    "\n",
-    "### Distribution python utilisée dans ce document\n",
-    "\n",
-    "La distribution python utilisée dans ce document: <https://www.anaconda.com/products/individual>\n",
-    "\n",
-    "\n",
-    "\n",
-    "### Documentation python / liens utiles\n",
-    "\n",
-    "- Page Python officielle: <http://www.python.org>\n",
-    "- The Python Language Reference: <https://docs.python.org/3.8/reference/index.html>\n",
-    "- The Python Standard Library: <https://docs.python.org/3.8/library/index.html>\n",
-    "- Recommandations de style d'écriture: <https://www.python.org/dev/peps/pep-0008/>\n",
-    "- Un livre gratuit sur Python (en anglais): <http://www.greenteapress.com/thinkpython/>\n"
+    "# Introduction au langage Python (partie 1)\n"
    ]
   },
   {
@@ -545,43 +526,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'e'"
+       "'H'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "s = \"Hello world!\"\n",
-    "s[1] # premier élément"
+    "s[0] # premier élément"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d'"
+       "'!'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s[-2] # dernier élément"
+    "s[-1] # dernier élément"
    ]
   },
   {
@@ -704,13 +685,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Exemple : A partir des lettres de l'alphabet, générer par une opération de slicing la chaîne de caractères \"cfilorux\"\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -726,6 +700,13 @@
    "source": [
     "import string\n",
     "print( string.ascii_uppercase)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exemple : A partir des lettres de l'alphabet, générer par une opération de slicing la chaîne de caractères \"cfilorux\"\n"
    ]
   },
   {
@@ -752,7 +733,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Mise en forme de chaînes de caractères\n"
+    "#### Mise en forme de chaînes de caractères: la fonction print()"
    ]
   },
   {
@@ -775,8 +756,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mise en forme de chaînes de caractères: dans le style C\n",
+    "\n",
+    "Voir documentation de la fonction printf en C"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -787,24 +777,22 @@
       "val = 1.000000000200000 \n",
       "val =  10 \n",
       "val = 1.0000000002 \n",
-      "1.0000000002\n",
       "val = 1.0000000002\n"
      ]
     }
    ],
    "source": [
     "a = 1.0000000002\n",
-    "print(\"val = %e \" % a) # comme en C (cf. printf)\n",
-    "print(\"val = %1.15f \" % a) # comme en C (cf. printf)\n",
-    "print(\"val = % 3d \" % 10) # comme en C (cf. printf)\n",
-    "print(\"val = %s \" % a) # comme en C (cf. printf)\n",
-    "print(str(a))\n",
+    "print(\"val = %e \" % a)\n",
+    "print(\"val = %1.15f \" % a)\n",
+    "print(\"val = % 3d \" % 10)\n",
+    "print(\"val = %s \" % a)\n",
     "print(\"val = \" + str(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +802,7 @@
       "val1 = 3.14 , val2 = 1 \n",
       "Le nombre pi est égal à 3.141592653589793 \n",
       "Le nombre e est égal à 2.718281828459045 \n",
-      "val = 0c en hexadecimal\n"
+      "Le nombre 12 s'écrit 0c en hexadecimal\n"
      ]
     }
    ],
@@ -824,11 +812,62 @@
     "# Plus avancé\n",
     "s = \"val1 = %.2f , val2 = %d \" % (3.1415, 1.5)\n",
     "print(s)\n",
+    "\n",
     "s = \"Le nombre %s est égal à %s \"\n",
     "print((s % (\"pi\", math.pi)))\n",
     "print((s % (\"e\", math.exp(1.))))\n",
+    "\n",
     "b=12\n",
-    "print(\"val = %02x en hexadecimal\" % b)"
+    "print(\"Le nombre %d s'écrit %02x en hexadecimal\" % (b, b) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mise en forme de chaînes de caractères avec la méthode format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "le nomre d'or est 1.618\n"
+     ]
+    }
+   ],
+   "source": [
+    "phi = 1.618\n",
+    "print( \"le nomre d'or est {}\".format(phi) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrez votre prenom: fabrice\n",
+      "Entrez votre age10\n",
+      "fabrice a l'age de 10 ans\n",
+      "fabrice a l'age de 10 ans\n"
+     ]
+    }
+   ],
+   "source": [
+    "prenom = input(\"Entrez votre prenom: \")\n",
+    "age = int( input(\"Entrez votre age\") )\n",
+    "\n",
+    "print( \"{} a l'age de {} ans\".format(prenom, age) )\n",
+    "print( prenom, \"a l'age de\", age, \"ans\")"
    ]
   },
   {
@@ -858,6 +897,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrez votre prenom: Fabrice\n",
+      "Entrez votre age10\n",
+      "Fabrice a l'age de 10 ans\n",
+      "Fabrice a l'age de 10 ans\n"
+     ]
+    }
+   ],
+   "source": [
+    "prenom = input(\"Entrez votre prenom: \")\n",
+    "age = int( input(\"Entrez votre age\") )\n",
+    "\n",
+    "print( f\"{prenom} a l'age de {age} ans\" )\n",
+    "print( prenom, \"a l'age de\", age, \"ans\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [
@@ -877,21 +940,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Joyeux LEON\n",
       "Joyeux noel\n"
      ]
     }
    ],
    "source": [
+    "import string\n",
+    "\n",
     "# Palindrome\n",
     "fete = \"leon\"\n",
-    "print(f\"Joyeux {fete[::-1]}\")"
+    "print(f\"Joyeux {fete.upper()}\" )\n",
+    "\n",
+    "print(f\"Joyeux {fete[::-1]}\")\n"
    ]
   },
   {
@@ -992,6 +1060,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrez un nombre: 6\n",
+      "modulo 0\n",
+      "Le nombre 6 est pair\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre = int( input(\"Entrez un nombre: \") )\n",
+    "print(\"modulo\", nombre % 2)\n",
+    "if nombre % 2 == 0:\n",
+    "    print(f\"Le nombre {nombre} est pair\")\n",
+    "else:\n",
+    "    print(f\"Le nombre {nombre} est impair\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1000,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1063,6 +1155,24 @@
     "ttc = (math.floor(ttc * 100) + 1) / 100\n",
     "\n",
     "print(\"valeur arrondie\", ttc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.62\n"
+     ]
+    }
+   ],
+   "source": [
+    "phi = 1.618\n",
+    "print( round(1.618, 2))"
    ]
   },
   {
@@ -1147,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1270,7 @@
    ],
    "source": [
     "# Hamlet\n",
-    "to_be = True\n",
+    "to_be = False\n",
     "print( to_be or not to_be )"
    ]
   },
@@ -1492,7 +1602,7 @@
    ],
    "source": [
     "import math as m\n",
-    "print(m. cos(1.))"
+    "print(m.cos(1.))"
    ]
   },
   {
@@ -1855,7 +1965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1983,7 @@
     "# Calcul de la valeur exacte du nombre d'or (phi)\n",
     "phi = ( 1 + math.sqrt(5) ) / 2\n",
     "print(phi)\n",
-    "print(math.pow(phi,2)) # nombre d'or au carré"
+    "print(math.pow(phi,2)) # nombre d'or au carré\n"
    ]
   },
   {
