--- a/intro-python-part4-csv_sql.ipynb
+++ b/intro-python-part4-csv_sql.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fichiers CSV - Base de données SQL\n",
+    "# Introduction au langage Python (partie 4) - Fichiers CSV - Base de données SQL\n",
+    "\n",
+    "## Sommaire\n",
+    "\n",
+    "  - Les fichiers CSV\n",
+    "    - Lecture de fichier CSV\n",
+    "    - écriture dans un fichier CSV\n",
+    "  - Les bases de données SQL\n",
+    "    - Création d'une base de données\n",
+    "    - Créer une table dans la base de données\n",
+    "    - Ajouter des lignes dans une table\n",
+    "    - Lecture d'une table\n",
+    "    - Effacer un enregistrement\n",
     "\n",
     "## 1 - Les fichiers CSV\n",
     "\n",
@@ -70,6 +82,65 @@
     "Nous allons lire les données du fichier departement.csv\n",
     "\n",
     "Déterminer les caractéristiques du fichier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Ain\n",
+      "2 Aisne\n",
+      "3 Allier\n",
+      "5 Hautes-Alpes\n",
+      "4 Alpes-de-Haute-Provence\n",
+      "6 Alpes-Maritimes\n",
+      "7 Ardèche\n",
+      "8 Ardennes\n",
+      "9 Ariège\n",
+      "10 Aube\n",
+      "11 Aude\n",
+      "12 Aveyron\n",
+      "13 Bouches-du-Rhône\n",
+      "14 Calvados\n",
+      "15 Cantal\n",
+      "16 Charente\n",
+      "17 Charente-Maritime\n",
+      "18 Cher\n",
+      "19 Corrèze\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '2a'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-37a4fbc30d3b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[1;31m#print(ligne, type(ligne))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[1;31m#print(ligne[0], ligne[1], ligne[2], ligne[3], ligne[4], ligne[5])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m         \u001b[0mcode_departement\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mligne\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m         \u001b[0mnom_departement\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mligne\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '2a'"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "with open('departement.csv', encoding=\"utf8\") as fichier_csv:\n",
+    "    lecteur_csv = csv.reader(fichier_csv, delimiter=',')\n",
+    "    \n",
+    "    for ligne in lecteur_csv:\n",
+    "        #print(ligne, type(ligne))\n",
+    "        #print(ligne[0], ligne[1], ligne[2], ligne[3], ligne[4], ligne[5])\n",
+    "        code_departement = int( ligne[1] )\n",
+    "        nom_departement = ligne[2]\n",
+    "        \n",
+    "        if code_departement < 42:\n",
+    "            print(code_departement, nom_departement)\n",
+    "        "
    ]
   },
   {
@@ -233,24 +304,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# enregistrer les DOM/TOM dans un fichier CSV\n",
     "import csv\n",
     "\n",
+    "voyelles = list(\"aeiouyAEIOUY\")\n",
+    "\n",
     "with open('departement.csv', encoding=\"utf8\") as fichier_csv:\n",
     "    lecteur_csv = csv.reader(fichier_csv, delimiter=',', quotechar='\"')\n",
     "\n",
     "    # w -> write - ouverture en mode écriture\n",
-    "    with open('dom_tom.csv', 'w', newline='') as fichier_csv_sortie:\n",
+    "    with open('dep_voyelle.csv', 'w', newline='') as fichier_csv_sortie:\n",
     "        enregistreur_csv = csv.writer(fichier_csv_sortie)\n",
     "    \n",
     "        for ligne in lecteur_csv:\n",
     "        \n",
     "            departement = ligne[1]\n",
-    "            if departement[0:2] == \"97\":\n",
+    "            nom_departement = ligne[2]\n",
+    "            if nom_departement[0] in voyelles:\n",
     "                enregistreur_csv.writerow( [ ligne[1], ligne[2] ] ) # écrire une ligne dans le fichier CSV\n"
    ]
   },
@@ -285,17 +359,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IP decimal 632109567\n",
-      "632109312 632109567 FR France Provence-Alpes-Cote-d'Azur Antonaves\n",
+      "IP decimal 1123971625\n",
+      "1123966976 1123975167 US United States of America Massachusetts Waltham\n",
       "\n",
-      "Nombre de lignes lues dans le fichier: 284255\n"
+      "Nombre de lignes lues dans le fichier: 633046\n"
      ]
     }
    ],
@@ -304,7 +378,7 @@
     "\n",
     "#ip = [ 193, 57, 120, 7 ] # adresse IP = 193.57.120.7\n",
     "\n",
-    "ip = [37, 173, 57, 255 ]\n",
+    "ip = [ 66, 254, 114, 41 ]\n",
     "\n",
     "# Format de l'adresse IP dans le fichier CSV\n",
     "ip_decimal = ip[0] * pow(256,3) + ip[1] * pow(256,2) + ip[2] * 256 + ip[3]\n",
