--- a/exercices/openpyxl_taskmanager/taskmanager.ipynb
+++ b/exercices/openpyxl_taskmanager/taskmanager.ipynb
@@ -32,75 +32,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A - Installation de openpyxl\n",
+    "## 1 - Présentation de openpyxl\n",
     "\n",
     "\n",
-    "### Étape 1 : Vérifier l'environnement Anaconda actif\n",
+    "openpyxl est une bibliothèque Python puissante et largement utilisée pour lire, écrire et modifier des fichiers Excel aux formats .xlsx et .xlsm. Elle permet de :\n",
     "\n",
-    "Ouvrez l’Invite Anaconda (ou un terminal Windows si le chemin vers Anaconda est configuré).\n",
+    "- Créer des fichiers Excel avec des feuilles multiples.\n",
+    "- Lire et modifier des cellules (valeurs, styles, formules, etc.).\n",
+    "- Gérer des fonctionnalités avancées comme les graphiques, les tableaux croisés dynamiques et les commentaires.\n",
+    "- Manipuler des styles (police, bordures, alignement) et appliquer des formats conditionnels.\n",
+    "- Travailler avec des fichiers Excel sans avoir besoin de Microsoft Excel.\n",
     "\n",
-    "Vérifiez quel environnement est actif :\n",
-    "```\n",
-    "conda info --envs\n",
-    "```\n",
+    "C'est un outil idéal pour automatiser les tâches Excel directement depuis un script Python.\n",
     "\n",
-    "L’environnement actif est marqué par un astérisque *.\n",
-    "Si nécessaire, activez un autre environnement :\n",
-    "```\n",
-    "conda activate nom_de_votre_environnement\n",
-    "```\n",
+    "### Points forts de openpyxl\n",
     "\n",
-    "### Étape 2 : Installer openpyxl dans l'environnement utilisateur\n",
+    "- Manipulation complète : Lecture, écriture et modification de fichiers Excel, y compris les styles et formules.\n",
+    "- Fiabilité : Support actif et mise à jour régulière pour les formats modernes d’Excel.\n",
+    "- Polyvalence : Peut être utilisé pour des automatisations simples ou des manipulations complexes.\n",
     "\n",
-    "Utilisez la commande suivante pour installer le package openpyxl sans privilèges administrateur :\n",
+    "### Quand choisir openpyxl ?\n",
     "\n",
-    "```\n",
-    "conda install --user openpyxl\n",
-    "```\n",
+    "- Lorsque vous devez modifier un fichier Excel existant.\n",
+    "- Si vous avez besoin de gérer des caractéristiques avancées comme les graphiques et les tableaux croisés.\n",
+    "- Pour créer et styliser des feuilles Excel depuis zéro.\n",
     "\n",
-    "--user : Cela installe le package uniquement pour l'utilisateur actuel, dans le répertoire personnel.\n",
+    "### Alternatives principales\n",
     "\n",
-    "### Étape 3 : Vérifier l'installation\n",
+    "- pandas :\n",
+    "    - Excellent pour l'analyse de données et la conversion entre Excel et d'autres formats.\n",
+    "    - Limité à la lecture/écriture simple ; pas de modification ou de stylisation.\n",
+    "    - Idéal pour des utilisateurs ayant besoin d'un traitement rapide des données.\n",
     "\n",
-    "Une fois l'installation terminée, lancez Python dans l'environnement Anaconda pour vérifier :\n",
+    "- xlsxwriter :\n",
+    "  - Parfait pour créer des fichiers Excel complexes avec des graphiques, formules et formats avancés.\n",
+    "  - Ne prend pas en charge la modification de fichiers existants.\n",
     "\n",
-    "```bash\n",
-    "$ python\n",
-    "```\n",
+    "- pyxlsb :\n",
+    "  - Spécialisé dans les fichiers .xlsb (Excel binaire), avec des performances optimales pour les gros fichiers.\n",
+    "  - Limité à la lecture uniquement.\n",
     "\n",
-    "```python\n",
-    "import openpyxl\n",
-    "print(\"openpyxl installé avec succès !\")\n",
-    "```\n",
-    "Si aucune erreur ne s’affiche, l'installation est réussie.\n",
+    "- xlrd (déprécié pour .xlsx) :\n",
+    "  - Principalement utilisé pour les anciens fichiers Excel au format .xls.\n",
     "\n",
-    "### Étape 4 : Utiliser openpyxl dans un notebook Jupyter\n",
-    "\n",
-    "Si vous utilisez Jupyter Notebook ou JupyterLab, assurez-vous que l'environnement Python de votre notebook correspond à celui où openpyxl a été installé.\n",
-    "\n",
-    "Activez l'environnement dans l'Invite Anaconda :\n",
-    "Lancez Jupyter Notebook depuis cet environnement :\n",
-    "\n",
-    "```\n",
-    "conda activate nom_de_votre_environnement\n",
-    "jupyter notebook\n",
-    "```\n",
-    "\n",
-    "Avec ces étapes, vous pouvez utiliser openpyxl dans Anaconda sous Windows sans nécessiter de privilèges administrateur. "
+    "En conclusion, openpyxl est la bibliothèque de référence si vous avez besoin de manipuler des fichiers Excel modernes de manière complète et flexible.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## B - Configuration de l'application taskmanager\n",
+    "## 2 - Configuration de l'application taskmanager\n",
     "\n",
     "Chargement des modules et configuration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,12 +103,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## C - Hello excel"
+    "## 3 - Hello excel\n",
+    "\n",
+    "Création d'un classeur hello.xlsx dans le dossier courant"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +142,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fonctions de lecture et de sauvegarde du classeur"
+    "## 4 - Fonctions de lecture et de sauvegarde du classeur\n",
+    "\n",
+    "Nous définissons nos fonctions pour lire et écrire un classeur excel"
    ]
   },
   {
@@ -194,6 +187,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test des fonctions en créant notre classeur taskmanager.xlsx"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -226,7 +226,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## E - Configuration classeur taskmanager.xlsx"
+    "## 5 - Configuration classeur taskmanager.xlsx\n",
+    "\n",
+    "Ajout de 2 feuilles dans notre classeur et ajout des entetes"
    ]
   },
   {
@@ -295,7 +297,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## F - Chargement et enregistrement des données"
+    "## 6 - Chargement et enregistrement des données\n",
+    "\n",
+    "Fonctions pour charger et sauvegarder les données livrables et taches dans les feuilles excel"
    ]
   },
   {
@@ -386,7 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exemple ajout de données dans le fichier excel"
+    "Exemple ajout de données dans le fichier excel en utilisant nos fonctions"
    ]
   },
   {
@@ -449,7 +453,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lister les données"
+    "## 7 - Lister les données\n",
+    "\n",
+    "Fonctions permettant de lister les données"
    ]
   },
   {
@@ -509,7 +515,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Saisie des données"
+    "## 8 - Saisie des données\n",
+    "\n",
+    "écran de saisie de livrable et de taches"
    ]
   },
   {
@@ -579,7 +587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Valider les informations\n",
+    "## 9 - Valider les informations\n",
     "\n",
     "- Définir les règles pour valider les informations individuelement (dates, statut)\n",
     "- Définir les regles permettant de valider un livrable, une tache et les lien entre eux\n",
@@ -597,7 +605,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Modification des données"
+    "## 10 - Modification des données"
    ]
   },
   {
@@ -611,7 +619,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Effacement de données"
+    "## 11 - Effacement de données"
    ]
   },
   {
@@ -625,7 +633,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Affichage des tâches à réaliser\n",
+    "## 12 - Affichage des tâches à réaliser\n",
     "\n",
     "Grouper les tâches par livrables et trier les tâches par date de début"
    ]
