--- a/exercices/openpyxl_taskmanager/taskmanager.ipynb
+++ b/exercices/openpyxl_taskmanager/taskmanager.ipynb
@@ -144,7 +144,7 @@
    "source": [
     "## 4 - Fonctions de lecture et de sauvegarde du classeur\n",
     "\n",
-    "Nous définissons nos fonctions pour lire et écrire un classeur excel"
+    "Nous définissons nos fonctions pour lire et écrire un classeur excel. La fonction de lecture permet de lire les données dans le fichier xlsx et de retourner à python des données utilisables."
    ]
   },
   {
@@ -228,7 +228,7 @@
    "source": [
     "## 5 - Configuration classeur taskmanager.xlsx\n",
     "\n",
-    "Ajout de 2 feuilles dans notre classeur et ajout des entetes"
+    "Ajout de 2 feuilles dans notre classeur et ajout des entêtes"
    ]
   },
   {
@@ -460,17 +460,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def repr_livrable(livrable):\n",
+    "    \"\"\" Fonction permettant de représenter un livrable\n",
+    "    \"\"\"\n",
     "    print(f\"Livrable(id: {livrable['id']}, titre: {livrable['titre']}, description: {livrable['description']})\")\n",
     "\n",
     "def repr_tache(tache):\n",
+    "    \"\"\" Fonction permettant de représenter une tâche\n",
+    "    \"\"\"\n",
     "    print( f\"Tache(id:{tache['id']}, titre:{tache['titre']}, description:{tache['description']}, id_livrable:{tache['id_livrable']}, date_debut:{tache['date_debut']}, date_fin:{tache['date_fin']}, priorite:{tache['priorite']}, commentaires:{tache['commentaires']}, statut:{tache['statut']})\" )\n",
     "\n",
     "def lister_livrables_option(livrables):\n",
+    "    \"\"\" Fonction permettant de représenter les livrables avec id et titre seulement\n",
+    "    \"\"\"\n",
     "    for livrable in livrables:\n",
     "        print(f\"{livrable['id']} - {livrable['titre']}\")\n",
     "\n",
