--- a/intro-python-part1.ipynb
+++ b/intro-python-part1.ipynb
@@ -24,21 +24,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
+      "11\n",
       "9.81\n"
      ]
     }
    ],
    "source": [
     "GRAVITE = 9.81\n",
-    "ma_variable = 10\n",
+    "ma_variable = 11\n",
     "print( ma_variable )\n",
     "print(GRAVITE)"
    ]
@@ -366,6 +366,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1.5\n",
+    "print(round(a))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -529,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +556,7 @@
        "'H'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,22 +568,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'!'"
+       "'d'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s[-1] # dernier élément"
+    "s[-2] # dernier élément"
    ]
   },
   {
@@ -943,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +969,8 @@
      "output_type": "stream",
      "text": [
       "Joyeux LEON\n",
-      "Joyeux noel\n"
+      "Joyeux noel\n",
+      "fete='leon'\n"
      ]
     }
    ],
@@ -962,7 +981,9 @@
     "fete = \"leon\"\n",
     "print(f\"Joyeux {fete.upper()}\" )\n",
     "\n",
-    "print(f\"Joyeux {fete[::-1]}\")\n"
+    "print(f\"Joyeux {fete[::-1]}\")\n",
+    "\n",
+    "print(f\"{fete=}\")"
    ]
   },
   {
@@ -1260,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1294,7 @@
    ],
    "source": [
     "# Hamlet\n",
-    "to_be = False\n",
+    "to_be = True\n",
     "print( to_be or not to_be )"
    ]
   },
@@ -2043,7 +2064,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -2057,7 +2078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
