--- a/traiteur/tssni.ipynb
+++ b/traiteur/tssni.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fcde7437",
    "metadata": {},
    "outputs": [
@@ -68,18 +68,30 @@
      "text": [
       "Affichage des mesures de température d'une chambre froide\n",
       "---------------------------------------------------------\n",
-      "Choisissez un numéro de chambre froide (1, 2 ou 3) : 1\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-9ef94bc51346>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m         \u001b[1;31m# parcours des données du fichier\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mchamp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcontenu_csv\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m             \u001b[1;32mif\u001b[0m \u001b[0mchamp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mrecherche\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchamp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mchamp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mchamp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mchamp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "03/11/2020 00:00 chambrefroide01 2,5\n",
+      "03/11/2020 01:00 chambrefroide01 2,5\n",
+      "03/11/2020 02:00 chambrefroide01 2,5\n",
+      "03/11/2020 03:00 chambrefroide01 2,5\n",
+      "03/11/2020 04:00 chambrefroide01 2,6\n",
+      "03/11/2020 05:00 chambrefroide01 2,6\n",
+      "03/11/2020 06:00 chambrefroide01 2,6\n",
+      "03/11/2020 07:00 chambrefroide01 2,8\n",
+      "03/11/2020 08:00 chambrefroide01 3,2\n",
+      "03/11/2020 09:00 chambrefroide01 3,6\n",
+      "03/11/2020 10:00 chambrefroide01 4\n",
+      "03/11/2020 11:00 chambrefroide01 4,4\n",
+      "03/11/2020 12:00 chambrefroide01 4,8\n",
+      "03/11/2020 13:00 chambrefroide01 5,2\n",
+      "03/11/2020 14:00 chambrefroide01 5,6\n",
+      "03/11/2020 15:00 chambrefroide01 6\n",
+      "03/11/2020 16:00 chambrefroide01 6,4\n",
+      "03/11/2020 17:00 chambrefroide01 2,5\n",
+      "03/11/2020 18:00 chambrefroide01 2,5\n",
+      "03/11/2020 19:00 chambrefroide01 2,6\n",
+      "03/11/2020 20:00 chambrefroide01 2,6\n",
+      "03/11/2020 21:00 chambrefroide01 2,5\n",
+      "03/11/2020 22:00 chambrefroide01 2,5\n",
+      "03/11/2020 23:00 chambrefroide01 2,5\n"
      ]
     }
    ],
@@ -100,7 +112,7 @@
     "    \n",
     "    # Ouverture du fichier de données\n",
     "    with open('traiteur.csv') as csv_file:\n",
-    "        contenu_csv = csv.reader(csv_file, delimiter=',')\n",
+    "        contenu_csv = csv.reader(csv_file, delimiter=';')\n",
     "        \n",
     "        # parcours des données du fichier\n",
     "        for champ in contenu_csv:\n",
@@ -155,12 +167,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "84d4e273",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Affichage des mesures de température d'une chambre froide\n",
+      "---------------------------------------------------------\n",
+      "03/11/2020 00:00 chambrefroide01 2,5\n",
+      "03/11/2020 01:00 chambrefroide01 2,5\n",
+      "03/11/2020 02:00 chambrefroide01 2,5\n",
+      "03/11/2020 03:00 chambrefroide01 2,5\n",
+      "03/11/2020 04:00 chambrefroide01 2,6\n",
+      "03/11/2020 05:00 chambrefroide01 2,6\n",
+      "03/11/2020 06:00 chambrefroide01 2,6\n",
+      "03/11/2020 07:00 chambrefroide01 2,8\n",
+      "03/11/2020 08:00 chambrefroide01 3,2\n",
+      "03/11/2020 09:00 chambrefroide01 3,6\n",
+      "03/11/2020 10:00 chambrefroide01 4\n",
+      "03/11/2020 11:00 chambrefroide01 4,4\n",
+      "03/11/2020 12:00 chambrefroide01 4,8\n",
+      "03/11/2020 13:00 chambrefroide01 5,2\n",
+      "03/11/2020 14:00 chambrefroide01 5,6\n",
+      "03/11/2020 15:00 chambrefroide01 6\n",
+      "03/11/2020 16:00 chambrefroide01 6,4\n",
+      "03/11/2020 17:00 chambrefroide01 2,5\n",
+      "03/11/2020 18:00 chambrefroide01 2,5\n",
+      "03/11/2020 19:00 chambrefroide01 2,6\n",
+      "03/11/2020 20:00 chambrefroide01 2,6\n",
+      "03/11/2020 21:00 chambrefroide01 2,5\n",
+      "03/11/2020 22:00 chambrefroide01 2,5\n",
+      "03/11/2020 23:00 chambrefroide01 2,5\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code source exercice 2\n"
+    "# Code source exercice 2\n",
+    "# affichage des temperatures v1\n",
+    "import csv\n",
+    "\n",
+    "# Affichage de l'entete du programme\n",
+    "print(\"Affichage des mesures de température d'une chambre froide\")\n",
+    "print('-'*57)\n",
+    "\n",
+    "# Selection d'une chambre froide\n",
+    "num_chambrefroide = input('Choisissez un numéro de chambre froide (1, 2 ou 3) : ')\n",
+    "\n",
+    "if num_chambrefroide in ('1','2','3'):\n",
+    "    # Nom de la chambre froide a rechercher dans les données\n",
+    "    recherche = 'chambrefroide0' + num_chambrefroide\n",
+    "    \n",
+    "    # Ouverture du fichier de données\n",
+    "    with open('traiteur.csv') as csv_file:\n",
+    "        contenu_csv = csv.reader(csv_file, delimiter=';')\n",
+    "        \n",
+    "        # parcours des données du fichier\n",
+    "        for champ in contenu_csv:\n",
+    "            if champ[2] == recherche:\n",
+    "                print(champ[0],champ[1],champ[2],champ[3])\n",
+    "else:\n",
+    "    print(\"erreur: numéro de chambre froide incorrect\")"
    ]
   },
   {
@@ -204,7 +273,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -218,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
